--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,15 +25,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
-          ./create-site.sh
-            - name: Commit report
+        run: ./create-site.sh
+        
       - name: Push new index  
         run: |
           git config --global user.name 'Greg Dryke'
