--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the trunk branch
   push:
     branches: [ trunk ]
-  pull_request:
-    branches: [ trunk ]
+  schedule:
+    - cron: "13 3 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
