--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         
       - name: Push new index  
         run: |
-          if [ -n $(git status --porcelain) ];
+          if git status --porcelain;
           then
             git config --global user.name 'Greg Dryke'
             git config --global user.email 'greg.dryke@gmail.com'
